--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Matilda Shevchenko | Front-End developer</title>
-    <link rel="stylesheet" href="normalize.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header>
@@ -62,9 +62,7 @@
               </div>
               <div class="aside__percentage-container percentage-container">
                 <div
-                  class="
-                    percentage-container__bar percentage-container__bar_100
-                  "
+                  class="percentage-container__bar percentage-container__bar_100"
                 ></div>
               </div>
             </div>
@@ -75,9 +73,7 @@
               </div>
               <div class="aside__percentage-container percentage-container">
                 <div
-                  class="
-                    percentage-container__bar percentage-container__bar_100
-                  "
+                  class="percentage-container__bar percentage-container__bar_100"
                 ></div>
               </div>
             </div>
@@ -389,6 +385,6 @@
       </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
